--- a/index.html
+++ b/index.html
@@ -7,33 +7,20 @@
     <title>Ramandhika IP - Github Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <style>
-        .btn:hover {
-            background: #EFCB68;
-        }
-
-        a:hover {
-            color: #EFCB68;
-        }
-
-        ul li::marker {
-            content: "✔";
-            /* Your symbol here */
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <section class="min-vh-100" style="background-color: #242F40;">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-md-12 col-xl-4">
+                <div class="col-md-12 col-xl-5">
                     <div class="card shadow-lg" style="border-radius: 15px;">
                         <div class="card-body">
                             <div class="mt-3 mb-4 text-center">
-                                <img src="img/me.jpg" class="rounded-circle img-fluid" style="width: 200px;" />
+                                <img src="assets/img/me.jpg" class="rounded-circle img-fluid" style="width: 200px;" />
                             </div>
-                            <h4 class="mb-2">Ramandhika Ilham Pratama</h4>
+                            <h4 class="mb-2">Hallo. <br>I'am Ramandhika Ilham Pratama</h4>
                             <p class="mb-2">I'm a college student from STMIK Sinar Nusantara,I have experience in Web
                                 Developer</p>
                             <hr>
