--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ramandhika IP - Github Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -17,40 +18,43 @@
                 <div class="col-md-12 col-xl-5">
                     <div class="card shadow-lg" style="border-radius: 15px;">
                         <div class="card-body">
-                            <div class="mt-3 mb-4 text-center">
-                                <img src="assets/img/me.jpg" class="rounded-circle img-fluid" style="width: 200px;" />
+                            <div class="mt-3 mb-4 text-center" data-aos="fade-down" data-aos-duration="1200">
+                                <img src="assets/img/me.jpg" class="rounded-circle img-fluid " style="width: 200px;" />
                             </div>
-                            <h4 class="mb-2">Hallo. <br>I'am Ramandhika Ilham Pratama</h4>
-                            <p class="mb-2">I'm a college student from STMIK Sinar Nusantara,I have experience in Web
-                                Developer</p>
-                            <hr>
-                            <!-- skill -->
-                            <div>
-                                <h5 class="mb-2">Front-End</h5>
-                                <ul>
-                                    <li>CSS Vanilla</li>
-                                    <li>Bootstrap</li>
-                                    <li>TailWind</li>
-                                </ul>
-                            </div>
+                            <div data-aos="fade-right" data-aos-duration="1200">
+                                <h4 class="mb-2">Hallo. <br>I'am Ramandhika Ilham Pratama</h4>
+                                <p class="mb-2">I'm a college student from STMIK Sinar Nusantara,I have experience in
+                                    Web
+                                    Developer</p>
+                                <hr>
+                                <!-- skill -->
+                                <div>
+                                    <h5 class="mb-2">Front-End</h5>
+                                    <ul>
+                                        <li>CSS Vanilla</li>
+                                        <li>Bootstrap</li>
+                                        <li>Tailwind</li>
+                                    </ul>
+                                </div>
 
-                            <div>
-                                <h5 class="mb-2">Back-End</h5>
-                                <ul>
-                                    <li>PHP : Laravel</li>
-                                    <li>JavaScript</li>
-                                    <li>MySql</li>
-                                </ul>
-                            </div>
+                                <div>
+                                    <h5 class="mb-2">Back-End</h5>
+                                    <ul>
+                                        <li>PHP : Laravel</li>
+                                        <li>JavaScript</li>
+                                        <li>MySql</li>
+                                    </ul>
+                                </div>
 
-                            <div>
-                                <h5 class="mb-2">Other experiences:</h5>
-                                <ul>
-                                    <li>Adobe XD</li>
-                                    <li>Figma</li>
-                                </ul>
+                                <div>
+                                    <h5 class="mb-2">Other experiences:</h5>
+                                    <ul>
+                                        <li>Adobe XD</li>
+                                        <li>Figma</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="text-center">
+                            <div class="text-center" data-aos="fade-up" data-aos-duration="1200">
                                 <a href="https://www.instagram.com/ramandhika.ip/"
                                     class="btn btn-primary btn-rounded btn-lg" style="background-color: #242F40;">
                                     Let's Discuss!
@@ -88,6 +92,10 @@
 </body>
 
 </html>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+</script>
 <script src="https://kit.fontawesome.com/984a8c9bbd.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
