--- a/index.html
+++ b/index.html
@@ -18,45 +18,54 @@
                 <div class="col-md-12 col-xl-5">
                     <div class="card shadow-lg" style="border-radius: 15px;">
                         <div class="card-body">
-                            <div class="mt-3 mb-4 text-center" data-aos="fade-down" data-aos-duration="1200">
-                                <img src="assets/img/me.jpg" class="rounded-circle img-fluid " style="width: 200px;" />
+                            <div class="text-end" data-aos="fade-down" data-aos-duration="1200">
+                                <button type="button" class="btn btn-outline-primary btn-floating"
+                                    data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                    <i class="fa-solid fa-align-right fa-lg"></i>
+                                </button>
+
+                                <div class="mt-3 mb-4 text-center">
+                                    <img src="assets/img/me.jpg" class="rounded-circle img-fluid "
+                                        style="width: 200px;">
+                                </div>
                             </div>
                             <div data-aos="fade-right" data-aos-duration="1200">
                                 <h4 class="mb-2">Hallo. <br>I'am Ramandhika Ilham Pratama</h4>
                                 <p class="mb-2">I'm a college student from STMIK Sinar Nusantara,I have experience in
-                                    Web
-                                    Developer</p>
+                                    Web Developer</p>
                                 <hr>
                                 <!-- skill -->
-                                <div>
-                                    <h5 class="mb-2">Front-End</h5>
-                                    <ul>
-                                        <li>CSS Vanilla</li>
-                                        <li>Bootstrap</li>
-                                        <li>Tailwind</li>
-                                    </ul>
-                                </div>
+                                <div class="skill">
+                                    <div>
+                                        <h5 class="mb-2">Front-End</h5>
+                                        <ul>
+                                            <li>CSS Vanilla</li>
+                                            <li>Bootstrap</li>
+                                            <li>Tailwind</li>
+                                        </ul>
+                                    </div>
 
-                                <div>
-                                    <h5 class="mb-2">Back-End</h5>
-                                    <ul>
-                                        <li>PHP : Laravel</li>
-                                        <li>JavaScript</li>
-                                        <li>MySql</li>
-                                    </ul>
-                                </div>
+                                    <div>
+                                        <h5 class="mb-2">Back-End</h5>
+                                        <ul>
+                                            <li>PHP : Laravel</li>
+                                            <li>JavaScript</li>
+                                            <li>MySql</li>
+                                        </ul>
+                                    </div>
 
-                                <div>
-                                    <h5 class="mb-2">Other experiences:</h5>
-                                    <ul>
-                                        <li>Adobe XD</li>
-                                        <li>Figma</li>
-                                    </ul>
+                                    <div>
+                                        <h5 class="mb-2">Other experiences:</h5>
+                                        <ul>
+                                            <li>Adobe XD</li>
+                                            <li>Figma</li>
+                                        </ul>
+                                    </div>
                                 </div>
                             </div>
                             <div class="text-center" data-aos="fade-up" data-aos-duration="1200">
                                 <a href="https://www.instagram.com/ramandhika.ip/"
-                                    class="btn btn-primary btn-rounded btn-lg" style="background-color: #242F40;">
+                                    class="btn btn-primary btn-rounded btn-lg">
                                     Let's Discuss!
                                 </a>
                                 <hr>
@@ -67,6 +76,10 @@
                                     <a href="https://github.com/ramandhika/"
                                         class="btn btn-outline-primary btn-floating">
                                         <i class="fa-brands fa-github fa-lg"></i>
+                                    </a>
+                                    <a href="https://www.linkedin.com/in/ramandhika-ilham-pratama-78bbab223/"
+                                        class="btn btn-outline-primary btn-floating">
+                                        <i class="fa-brands fa-linkedin fa-lg"></i>
                                     </a>
                                     <a href="https://www.instagram.com/ramandhika.ip/"
                                         class="btn btn-outline-primary btn-floating">
@@ -89,6 +102,32 @@
         </div>
     </section>
 
+    <!-- Modal -->
+    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="staticBackdropLabel"></h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <ul class="about_me text-center">
+                        <a href="">About Me</a>
+                        <hr>
+                        <a href="">Work Experience</a>
+                        <hr>
+                        <a href="">Download Resume</a>
+                        <hr>
+                        <a href="">Contact Me</a>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
