--- a/index.html
+++ b/index.html
@@ -1,141 +1,106 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Ramandhika IP - Github Profile</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+            crossorigin="anonymous"
+        />
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+        <link rel="stylesheet" href="assets/css/style.css" />
+    </head>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ramandhika IP - Github Profile</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-
-<body>
-    <section class="min-vh-100 background">
-        <div class="container py-5 h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col-md-12 col-xl-5">
-                    <div class="card shadow-lg" style="border-radius: 15px;">
-                        <div class="card-body">
-                            <div class="text-end" data-aos="fade-down" data-aos-duration="1200">
-                                <button type="button" class="btn btn-outline-primary btn-floating"
-                                    data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                                    <i class="fa-solid fa-align-right fa-lg"></i>
-                                </button>
-
-                                <div class="mt-3 mb-4 text-center">
-                                    <img src="assets/img/me.jpg" class="rounded-circle img-fluid "
-                                        style="width: 200px;">
-                                </div>
-                            </div>
-                            <div data-aos="fade-right" data-aos-duration="1200">
-                                <h4 class="mb-2">Hallo. <br>I'am Ramandhika Ilham Pratama</h4>
-                                <p class="mb-2">I'm a college student from STMIK Sinar Nusantara,I have experience in
-                                    Web Developer</p>
-                                <hr>
-                                <!-- skill -->
-                                <div class="skill">
-                                    <div>
-                                        <h5 class="mb-2">Front-End</h5>
-                                        <ul>
-                                            <li>CSS Vanilla</li>
-                                            <li>Bootstrap</li>
-                                            <li>Tailwind</li>
-                                        </ul>
-                                    </div>
-
-                                    <div>
-                                        <h5 class="mb-2">Back-End</h5>
-                                        <ul>
-                                            <li>PHP : Laravel</li>
-                                            <li>JavaScript</li>
-                                            <li>MySql</li>
-                                        </ul>
-                                    </div>
-
-                                    <div>
-                                        <h5 class="mb-2">Other experiences:</h5>
-                                        <ul>
-                                            <li>Adobe XD</li>
-                                            <li>Figma</li>
-                                        </ul>
+    <body>
+        <section class="min-vh-100 background">
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-md-12 col-xl-5">
+                        <div class="card shadow-lg" style="border-radius: 10px">
+                            <div class="card-body mt-3 mb-3">
+                                <div class="text-end" data-aos="fade-down" data-aos-duration="1200">
+                                    <div class="mt-3 mb-4 text-center">
+                                        <img
+                                            src="assets/img/me.jpg"
+                                            class="rounded-circle img-fluid"
+                                            style="width: 250px"
+                                        />
                                     </div>
                                 </div>
-                            </div>
-                            <div class="text-center" data-aos="fade-up" data-aos-duration="1200">
-                                <a href="https://www.instagram.com/ramandhika.ip/"
-                                    class="btn btn-primary btn-rounded btn-lg">
-                                    Let's Discuss!
-                                </a>
-                                <hr>
-                                <p class="text-muted mb-4">@ramandhika.ip <span class="mx-2">|</span> <a
-                                        href="https://ramandhika.github.io/">ramandhika.github.io</a>
-                                </p>
-                                <div class="mb-4 pb-2">
-                                    <a href="https://github.com/ramandhika/"
-                                        class="btn btn-outline-primary btn-floating">
-                                        <i class="fa-brands fa-github fa-lg"></i>
+                                <div class="m-4">
+                                    <div data-aos="fade-right" data-aos-duration="1200">
+                                        <h4 class="mb-2">Hallo. <br />I'am Ramandhika Ilham Pratama</h4>
+                                        <p class="mb-2">
+                                            Information Systems student with work and organizational experience in
+                                            programming and multimedia. Has the ability to design a database, design a
+                                            website using Figma, and implement it into a website. Have the desire to
+                                            develop programming skills in more depth.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="text-center" data-aos="fade-up" data-aos-duration="1200">
+                                    <a
+                                        href="https://www.linkedin.com/in/ramandhika-ilham-pratama-78bbab223/"
+                                        class="btn btn-primary btn-rounded btn-lg fw-semibold fs-5"
+                                    >
+                                        <i class="fa-brands fa-linkedin"></i> Let's Discuss!
                                     </a>
-                                    <a href="https://www.linkedin.com/in/ramandhika-ilham-pratama-78bbab223/"
-                                        class="btn btn-outline-primary btn-floating">
-                                        <i class="fa-brands fa-linkedin fa-lg"></i>
-                                    </a>
-                                    <a href="https://www.instagram.com/ramandhika.ip/"
-                                        class="btn btn-outline-primary btn-floating">
-                                        <i class="fa-brands fa-instagram fa-lg"></i>
-                                    </a>
-                                    <a href="https://www.youtube.com/channel/UC4ySbX_b78g4B2z0mjARixA"
-                                        class="btn btn-outline-primary btn-floating">
-                                        <i class="fa-brands fa-youtube fa-lg"></i>
-                                    </a>
-                                    <a href="https://www.paypal.com/paypalme/ramandhika29"
-                                        class="btn btn-outline-primary btn-floating">
-                                        <i class="fa-brands fa-paypal fa-lg"></i>
-                                    </a>
+                                    <hr />
+                                    <p class="text-muted mb-4">
+                                        @ramandhika.ip <span class="mx-2">|</span>
+                                        <a href="https://ramandhika.github.io/">ramandhika.github.io</a>
+                                    </p>
+                                    <div class="mb-4">
+                                        <a
+                                            href="https://github.com/ramandhika/"
+                                            class="btn btn-outline-primary btn-floating"
+                                        >
+                                            <i class="fa-brands fa-github fa-lg"></i>
+                                        </a>
+                                        <a
+                                            href="https://www.linkedin.com/in/ramandhika-ilham-pratama-78bbab223/"
+                                            class="btn btn-outline-primary btn-floating"
+                                        >
+                                            <i class="fa-brands fa-linkedin fa-lg"></i>
+                                        </a>
+                                        <a
+                                            href="https://www.instagram.com/ramandhika.ip/"
+                                            class="btn btn-outline-primary btn-floating"
+                                        >
+                                            <i class="fa-brands fa-instagram fa-lg"></i>
+                                        </a>
+                                        <a
+                                            href="https://www.youtube.com/channel/UC4ySbX_b78g4B2z0mjARixA"
+                                            class="btn btn-outline-primary btn-floating"
+                                        >
+                                            <i class="fa-brands fa-youtube fa-lg"></i>
+                                        </a>
+                                        <a
+                                            href="https://www.paypal.com/paypalme/ramandhika29"
+                                            class="btn btn-outline-primary btn-floating"
+                                        >
+                                            <i class="fa-brands fa-paypal fa-lg"></i>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Modal -->
-    <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-        aria-labelledby="staticBackdropLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-xl">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <ul class="about_me text-center">
-                        <a href="">About Me</a>
-                        <hr>
-                        <a href="">Work Experience</a>
-                        <hr>
-                        <a href="">Download Resume</a>
-                        <hr>
-                        <a href="">Contact Me</a>
-                    </ul>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-</body>
-
+        </section>
+    </body>
 </html>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
 </script>
 <script src="https://kit.fontawesome.com/984a8c9bbd.js" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous">
-</script>
+<script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"
+></script>
