--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="row d-flex justify-content-center align-items-center h-100">
                     <div class="col-md-12 col-xl-5">
                         <div class="card shadow-lg" style="border-radius: 10px">
-                            <div class="card-body mt-3 mb-3">
+                            <div class="card-body mt-3">
                                 <div class="text-end" data-aos="fade-down" data-aos-duration="1200">
                                     <div class="mt-3 mb-4 text-center">
                                         <img
@@ -31,60 +31,49 @@
                                     </div>
                                 </div>
                                 <div class="m-4">
-                                    <div data-aos="fade-right" data-aos-duration="1200">
-                                        <h4 class="mb-2">Hallo. <br />I'am Ramandhika Ilham Pratama</h4>
-                                        <p class="mb-2">
+                                    <div data-aos="fade-right" data-aos-duration="1200" class="">
+                                        <h3 class="mb-2">Hallo. <br />I'am Ramandhika Ilham Pratama</h3>
+                                        <span class="">
                                             Information Systems student with work and organizational experience in
                                             programming and multimedia. Has the ability to design a database, design a
                                             website using Figma, and implement it into a website. Have the desire to
                                             develop programming skills in more depth.
-                                        </p>
+                                        </span>
                                     </div>
                                 </div>
                                 <div class="text-center" data-aos="fade-up" data-aos-duration="1200">
-                                    <a
-                                        href="https://www.linkedin.com/in/ramandhika-ilham-pratama-78bbab223/"
-                                        class="btn btn-primary btn-rounded btn-lg fw-semibold fs-5"
-                                    >
-                                        <i class="fa-brands fa-linkedin"></i> Let's Discuss!
-                                    </a>
-                                    <hr />
-                                    <p class="text-muted mb-4">
-                                        @ramandhika.ip <span class="mx-2">|</span>
-                                        <a href="https://ramandhika.github.io/">ramandhika.github.io</a>
-                                    </p>
-                                    <div class="mb-4">
+                                    <div class="d-flex flex-column item-show">
                                         <a
                                             href="https://github.com/ramandhika/"
-                                            class="btn btn-outline-primary btn-floating"
+                                            class="btn btn-outline-primary btn-rounded btn-lg fw-semibold fs-6"
                                         >
-                                            <i class="fa-brands fa-github fa-lg"></i>
-                                        </a>
-                                        <a
-                                            href="https://www.linkedin.com/in/ramandhika-ilham-pratama-78bbab223/"
-                                            class="btn btn-outline-primary btn-floating"
-                                        >
-                                            <i class="fa-brands fa-linkedin fa-lg"></i>
+                                            <i class="fa-brands fa-github"></i> Let's look my work!
                                         </a>
                                         <a
                                             href="https://www.instagram.com/ramandhika.ip/"
-                                            class="btn btn-outline-primary btn-floating"
+                                            class="btn btn-outline-primary btn-rounded btn-lg fw-semibold fs-6"
                                         >
-                                            <i class="fa-brands fa-instagram fa-lg"></i>
+                                            <i class="fa-brands fa-instagram"></i> Let's Socialize!
                                         </a>
                                         <a
-                                            href="https://www.youtube.com/channel/UC4ySbX_b78g4B2z0mjARixA"
-                                            class="btn btn-outline-primary btn-floating"
+                                            href="https://www.linkedin.com/in/ramandhika-ilham-pratama-78bbab223/"
+                                            class="btn btn-outline-primary btn-rounded btn-lg fw-semibold fs-6"
                                         >
-                                            <i class="fa-brands fa-youtube fa-lg"></i>
+                                            <i class="fa-brands fa-linkedin"></i> Let's Connect!
                                         </a>
                                         <a
-                                            href="https://www.paypal.com/paypalme/ramandhika29"
-                                            class="btn btn-outline-primary btn-floating"
+                                            href="mailto:ramandhika.ilham@gmail.com"
+                                            class="btn btn-outline-primary btn-rounded btn-lg fw-semibold fs-6"
                                         >
-                                            <i class="fa-brands fa-paypal fa-lg"></i>
+                                            <i class="fa-regular fa-envelope"></i> Let's Discuss!
                                         </a>
                                     </div>
+                                    <hr class="mt-5" />
+                                    <p class="text-muted mb-4">
+                                        @ramandhika.ip <span class="mx-2">|</span>
+                                        <a href="https://ramandhika.github.io/">ramandhika.github.io</a>
+                                        <a href="mailto:ramandhika.ilham@gmail.com">ramandhika.ilham@gmail.com</a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
