Change Framework from Bootstrap to Tailwind

--- a/index.html
+++ b/index.html
@@ -1,95 +1,152 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Ramandhika IP - Github Profile</title>
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-            crossorigin="anonymous"
-        />
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-        <link rel="stylesheet" href="assets/css/style.css" />
-    </head>
+        <link rel="stylesheet" href="style.css" />
+        <script src="https://cdn.tailwindcss.com"></script>
+        <style type="text/tailwindcss">
+            @layer utilities {
+                .gradient-bg {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-size: 300% 300%;
+                    background-image: linear-gradient(75deg, #0d1b2a 0%, #1b263b 25%, #415a77 51%, #778da9 100%);
+                    -webkit-animation: AnimateBG 17s ease infinite;
+                    animation: AnimateBG 17s ease infinite;
+                }
 
+                @-webkit-keyframes AnimateBG {
+                    0% {
+                        background-position: 0% 50%;
+                    }
+                    50% {
+                        background-position: 100% 50%;
+                    }
+                    100% {
+                        background-position: 0% 50%;
+                    }
+                }
+
+                @keyframes AnimateBG {
+                    0% {
+                        background-position: 0% 50%;
+                    }
+                    50% {
+                        background-position: 100% 50%;
+                    }
+                    100% {
+                        background-position: 0% 50%;
+                    }
+                }
+
+                @-webkit-keyframes AnimateBG {
+                    0% {
+                        background-position: 0% 50%;
+                    }
+                    50% {
+                        background-position: 100% 50%;
+                    }
+                    100% {
+                        background-position: 0% 50%;
+                    }
+                }
+
+                @keyframes AnimateBG {
+                    0% {
+                        background-position: 0% 50%;
+                    }
+                    50% {
+                        background-position: 100% 50%;
+                    }
+                    100% {
+                        background-position: 0% 50%;
+                    }
+                }
+
+                .w-30 {
+                    width: 30%;
+                }
+
+                .biru {
+                    color: #415a77;
+                    border-color: #415a77;
+                }
+
+                .biru:hover {
+                    color: #fff;
+                    background-color: #415a77;
+                }
+            }
+        </style>
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    </head>
     <body>
-        <section class="min-vh-100 background">
-            <div class="container py-5 h-100">
-                <div class="row d-flex justify-content-center align-items-center h-100">
-                    <div class="col-md-12 col-xl-5">
-                        <div class="card shadow-lg" style="border-radius: 10px">
-                            <div class="card-body mt-3">
-                                <div class="text-end" data-aos="fade-down" data-aos-duration="1200">
-                                    <div class="mt-3 mb-4 text-center">
-                                        <img
-                                            src="assets/img/me.jpg"
-                                            class="rounded-circle img-fluid"
-                                            style="width: 250px"
-                                        />
-                                    </div>
-                                </div>
-                                <div class="m-4">
-                                    <div data-aos="fade-right" data-aos-duration="1200" class="">
-                                        <h3 class="mb-2">Hallo. <br />I'am Ramandhika Ilham Pratama</h3>
-                                        <span class="">
-                                            Information Systems student with work and organizational experience in
-                                            programming and multimedia. Has the ability to design a database, design a
-                                            website using Figma, and implement it into a website. Have the desire to
-                                            develop programming skills in more depth.
-                                        </span>
-                                    </div>
-                                </div>
-                                <div class="text-center" data-aos="fade-up" data-aos-duration="1200">
-                                    <div class="d-flex flex-column item-show">
-                                        <a
-                                            href="https://github.com/ramandhika/"
-                                            class="btn btn-outline-primary btn-rounded btn-lg fw-semibold fs-6"
-                                        >
-                                            <i class="fa-brands fa-github"></i> Let's look my work!
-                                        </a>
-                                        <a
-                                            href="https://www.instagram.com/ramandhika.ip/"
-                                            class="btn btn-outline-primary btn-rounded btn-lg fw-semibold fs-6"
-                                        >
-                                            <i class="fa-brands fa-instagram"></i> Let's Socialize!
-                                        </a>
-                                        <a
-                                            href="https://www.linkedin.com/in/ramandhika-ilham-pratama-78bbab223/"
-                                            class="btn btn-outline-primary btn-rounded btn-lg fw-semibold fs-6"
-                                        >
-                                            <i class="fa-brands fa-linkedin"></i> Let's Connect!
-                                        </a>
-                                        <a
-                                            href="mailto:ramandhika.ilham@gmail.com"
-                                            class="btn btn-outline-primary btn-rounded btn-lg fw-semibold fs-6"
-                                        >
-                                            <i class="fa-regular fa-envelope"></i> Let's Discuss!
-                                        </a>
-                                    </div>
-                                    <hr class="mt-5" />
-                                    <p class="text-muted mb-4">
-                                        @ramandhika.ip <span class="mx-2">|</span>
-                                        <a href="https://ramandhika.github.io/">ramandhika.github.io</a>
-                                        <a href="mailto:ramandhika.ilham@gmail.com">ramandhika.ilham@gmail.com</a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+        <div class="flex justify-center items-center h-full gradient-bg">
+            <div class="bg-white flex flex-col justify-center w-30 h-fit rounded-xl mx-auto px-7 py-5 my-10">
+                <img
+                    src="https://avatars.githubusercontent.com/u/64927511?v=4"
+                    alt="Profile picture"
+                    class="rounded-full w-2/4 mx-auto mb-5 mt-5 shadow-lg"
+                />
+                <h3 class="text-xl">
+                    <b>Hallo. <br />I'am Ramandhika Ilham Pratama 👋</b>
+                </h3>
+                <span class="text-xs">
+                    I am a fifth-semester Information Systems student who has a passion for website development. I have
+                    experience in creating and managing web projects using various technologies and frameworks such as
+                    .NET, PHP, JavaScript, Laravel, and RESTful API. I also have proficiency in database management
+                    using MySQL and SQL Server. I am also familiar with Google Cloud Platform and how to deploy
+                    applications using it. I am eager to learn new technologies and frameworks to improve my web
+                    development skills.
+                </span>
+                <div class="mx-auto mt-3 mb-3 flex flex-col text-center">
+                    <a
+                        href="https://github.com/ramandhika"
+                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
+                        target="_blank"
+                    >
+                        <i class="fa-brands fa-github"></i> Let's look at my work!
+                    </a>
+                    <a
+                        href="https://drive.google.com/file/d/1XbDh4Cw9PaDmTsifvSnEUh8TcwRDg-ei/view?usp=sharing"
+                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
+                        target="_blank"
+                    >
+                        <i class="fa-solid fa-file-alt"></i> Let's look at my CV!
+                    </a>
+                    <a
+                        href="https://www.instagram.com/ramandhika.ip"
+                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
+                        target="_blank"
+                    >
+                        <i class="fa-brands fa-instagram"></i> Let's Socialize!
+                    </a>
+                    <a
+                        href="https://www.linkedin.com/in/ramandhika-ip"
+                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
+                        target="_blank"
+                    >
+                        <i class="fa-brands fa-linkedin"></i> Let's Connect!
+                    </a>
+                    <a
+                        href="mailto:ramandhika.ilham@gmail.com"
+                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
+                        target="_blank"
+                    >
+                        <i class="fa-regular fa-envelope"></i> Let's Discuss!
+                    </a>
                 </div>
+                <hr />
+                <p class="text-gray-500 my-5 text-center text-sm">
+                    @ramandhika.ip <span class="mx-2">|</span>
+                    <a href="https://ramandhika.github.io/" target="_blank">ramandhika.github.io</a>
+                    <a href="mailto:ramandhika.ilham@gmail.com" target="_blank">ramandhika.ilham@gmail.com</a>
+                </p>
             </div>
-        </section>
+        </div>
     </body>
 </html>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init();
-</script>
 <script src="https://kit.fontawesome.com/984a8c9bbd.js" crossorigin="anonymous"></script>
-<script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-    crossorigin="anonymous"
-></script>
