--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                 /* Default styles for mobile devices */
                 .w-30 {
-                    width: 70%;
+                    width: 85%;
                 }
 
                 /* Styles for tablets (portrait) */
@@ -106,12 +106,12 @@
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="flex justify-center items-center h-full gradient-bg">
+        <div class="flex justify-center items-center h-screen lg:h-full gradient-bg">
             <div class="bg-white flex flex-col justify-center w-30 h-fit rounded-xl mx-auto px-7 py-5 my-10">
                 <img
                     src="https://avatars.githubusercontent.com/u/64927511?v=4"
                     alt="Profile picture"
-                    class="rounded-full w-2/4 mx-auto mb-5 mt-5 shadow-lg"
+                    class="rounded-full w-2/4 mx-auto mb-5 mt-5 shadow-2xl"
                 />
                 <h3 class="text-xl">
                     <b>Hallo. <br />I'am Ramandhika Ilham Pratama 👋</b>
