Update personal information in index.html

--- a/index.html
+++ b/index.html
@@ -115,46 +115,43 @@
                 <h3 class="text-xl">
                     <b>Hallo. <br />I'am Ramandhika Ilham Pratama 👋</b>
                 </h3>
-                <span class="text-xs">
-                    I am a fifth-semester Information Systems student who has a passion for website development. I have
-                    experience in creating and managing web projects using various technologies and frameworks such as
-                    .NET, PHP, JavaScript, Laravel, and RESTful API. I also have proficiency in database management
-                    using MySQL and SQL Server. I am also familiar with Google Cloud Platform and how to deploy
-                    applications using it. I am eager to learn new technologies and frameworks to improve my web
-                    development skills.
+                <span class="text-sm">
+                    I am a fifth-semester Information Systems student with a passion for website development. I have
+                    experience in .NET, PHP, JavaScript, Laravel, and RESTful API. Proficient in MySQL and SQL Server.
+                    Familiar with Google Cloud Platform. Eager to learn and improve web development skills.
                 </span>
                 <div class="mx-auto mt-3 mb-3 flex flex-col text-center">
                     <a
-                        href="https://github.com/ramandhika"
-                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
-                        target="_blank"
-                    >
-                        <i class="fa-brands fa-github"></i> Let's look at my work!
-                    </a>
-                    <a
                         href="https://drive.google.com/file/d/1XbDh4Cw9PaDmTsifvSnEUh8TcwRDg-ei/view?usp=sharing"
-                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
+                        class="border biru shadow-lg border-1 w-full px-10 py-1 rounded-md my-2"
                         target="_blank"
                     >
                         <i class="fa-solid fa-file-alt"></i> Let's look at my CV!
                     </a>
                     <a
-                        href="https://www.instagram.com/ramandhika.ip"
-                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
+                        href="https://github.com/ramandhika"
+                        class="border biru shadow-lg border-1 w-full px-10 py-1 rounded-md my-2"
                         target="_blank"
                     >
-                        <i class="fa-brands fa-instagram"></i> Let's Socialize!
+                        <i class="fa-brands fa-github"></i> Let's look at my work!
                     </a>
                     <a
                         href="https://www.linkedin.com/in/ramandhika-ip"
-                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
+                        class="border biru shadow-lg border-1 w-full px-10 py-1 rounded-md my-2"
                         target="_blank"
                     >
                         <i class="fa-brands fa-linkedin"></i> Let's Connect!
                     </a>
                     <a
+                        href="https://www.instagram.com/ramandhika.ip"
+                        class="border biru shadow-lg border-1 w-full px-10 py-1 rounded-md my-2"
+                        target="_blank"
+                    >
+                        <i class="fa-brands fa-instagram"></i> Let's Socialize!
+                    </a>
+                    <a
                         href="mailto:ramandhika.ilham@gmail.com"
-                        class="border biru border-1 w-full px-10 py-1 rounded-md my-2"
+                        class="border biru shadow-lg border-1 w-full px-10 py-1 rounded-md my-2"
                         target="_blank"
                     >
                         <i class="fa-regular fa-envelope"></i> Let's Discuss!
@@ -162,10 +159,14 @@
                 </div>
                 <hr />
                 <p class="text-gray-500 my-5 text-center text-sm">
-                    @ramandhika.ip <span class="mx-2">|</span>
-                    <a href="https://ramandhika.github.io/" target="_blank">ramandhika.github.io</a>
-                    <a href="mailto:ramandhika.ilham@gmail.com" target="_blank">ramandhika.ilham@gmail.com</a>
+                    <i class="fa-brands fa-instagram"></i> ramandhika.ip <span class="mx-2">|</span>
+                    <a href="mailto:ramandhika.ilham@gmail.com" target="_blank"
+                        ><i class="fa-regular fa-envelope"></i> ramandhika.ilham@gmail.com</a
+                    >
                 </p>
+                <a href="https://github.com/ramandhika" class="text-center text-sm" target="_blank"
+                    >Made with 💖 by Ramandhika Ilham Pratama</a
+                >
             </div>
         </div>
     </body>
