Update favicon link in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="/public/img/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="/img/favicon.ico" type="image/x-icon" />
         <title>Portfolio - Ramandhika Ilham Pratama</title>
         <link rel="stylesheet" href="css/style.css" />
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
                         <div class="flex flex-shrink-0 items-center">
-                            <img class="h-8 w-auto" src="/public/img/icon.png" alt="R" />
+                            <img class="h-8 w-auto" src="/img/icon.png" alt="R" />
                             <span class="ml-2 dark:text-white text-xl font-medium">RAMANDHIKA</span>
                         </div>
                         <div class="hidden sm:ml-auto sm:block">
@@ -202,7 +202,7 @@
                 <div class="w-8/12 sm:w-5/12 sm:mt-0 mx-auto my-8 sm:my-0 sm:block">
                     <img
                         class="w-10/12 mx-auto object-cover"
-                        src="/public/img/profile.png"
+                        src="/img/profile.png"
                         alt="Ramandhika Ilham Pratama"
                     />
                 </div>
