--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="flex items-center justify-center flex-1 sm:items-stretch sm:justify-start">
                         <div class="flex items-center flex-shrink-0">
-                            <img class="w-auto h-8" src="/public/img/icon.png" alt="R" />
+                            <img class="w-auto h-8" src="img/icon.png" alt="R" />
                             <span class="ml-2 text-xl font-medium dark:text-white">RAMANDHIKA</span>
                         </div>
                         <div class="hidden sm:ml-auto sm:block">
@@ -202,7 +202,7 @@
                 <div class="w-8/12 mx-auto my-8 sm:w-5/12 sm:mt-0 sm:my-0 sm:block">
                     <img
                         class="object-cover w-10/12 mx-auto"
-                        src="/public/img/profile.png"
+                        src="img/profile.png"
                         alt="Ramandhika Ilham Pratama"
                     />
                 </div>
@@ -375,7 +375,7 @@
                     I have worked on various projects in different fields and domains. Some of the projects that I have
                     completed are:
                 </p>
-                <div class="grid grid-cols-1 gap-4 mt-10 text-left sm:grid-cols-3">
+                <!-- <div class="grid grid-cols-1 gap-4 mt-10 text-left sm:grid-cols-3">
                     <div class="overflow-hidden bg-white rounded-lg shadow-lg">
                         <div x-data="{ zoomed: false }">
                             <img
@@ -406,6 +406,9 @@
                             <button class="w-full px-5 py-2 font-semibold text-gray-800 transition duration-300 ease-in-out border-2 rounded-lg md:w-1/6 bg-gray-800/20 border-gray-800/95 hover:bg-gray-800/95 hover:text-white"><i class="fab fa-github"></i></button>
                         </div>
                     </div>
+                </div> -->
+                <div class="text-center mt-20">
+                    <h2 class="text-5xl font-semibold dark:text-white">Coming Soon</h2>
                 </div>
             </div>
         </div>
